# IOT-TileNodeCoordinator

./: .env.complete  .env.example  .gitignore  BACKEND_FIXED.md  BACKEND_INTEGRATION_GUIDE.md  BUILD_AND_TEST.md  CHANGES.md  CHECK_SERVICES.bat  CODE_OPTIMIZATION_REPORT.md  COMPLETE_NVS_FIX.md  CONNECTIVITY_FIX.md  COORDINATOR_ERROR_ANALYSIS.md  CUSTOMIZATION_TAB_FINAL_SUMMARY.md  CUSTOMIZE_TAB_HANDOFF.md  DEPLOYMENT.md  Dockerfile  EMERGENCY_DEBUG.md  ESP_NOW_PAIRING_FIX.md  FEATURE_CLEAR_NODES.md  FINAL_FIX.bat  FIXES_APPLIED.md  FIX_ERRORS_NOW.md  FIX_NOW.md  FIX_NVS_LOGS.md  FRONTEND_QUICK_REFERENCE.md  FRONTEND_SERVICES_COMPLETE.md  HEALTH_INDICATORS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_TASKS.md  LED_AND_TELEMETRY_FIXES.md  LOGGER_FIX_SUMMARY.md  MQTT_TOPIC_ALIGNMENT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_FIX.md  QUICK_START.md  README.md  README_NOW.txt  README_STARTUP.md  REBUILD_BACKEND.bat  (+27 more)
.github/: copilot-instructions.md
IOT-Backend-main/: .gitignore  Dockerfile  MODULE.bazel  docker-compose.yaml  go.sum
IOT-Backend-main/IOT-Backend-main/: BUILD.bazel  Dockerfile  SETTINGS_BACKEND_TEMPLATE.md  go.mod
IOT-Backend-main/IOT-Backend-main/cmd/iot/: BUILD.bazel  main.go
IOT-Backend-main/IOT-Backend-main/internal/: integration_test.go
IOT-Backend-main/IOT-Backend-main/internal/config/: BUILD.bazel  config.yaml  google-service-account.json.example  mosquitto.conf  pwfile
IOT-Backend-main/IOT-Backend-main/internal/db/: BUILD  mosquitto.db
IOT-Backend-main/IOT-Backend-main/internal/googlehome/: module.go  service.go
IOT-Backend-main/IOT-Backend-main/internal/http/: BUILD.bazel  customize_handlers.go  handlers.go  handlers_test.go  http.go  radar_renderer.go  settings_handlers.go  zone_handlers.go
IOT-Backend-main/IOT-Backend-main/internal/repository/: mongo.go  repository.go
IOT-Backend-main/IOT-Backend-main/internal/types/: BUILD  types.go
IOT-Backend-main/cmd/iot/: main.go
IOT-Backend-main/internal/config/: config.go
IOT-Backend-main/internal/db/: mongo.go
IOT-Backend-main/internal/googlehome/: handlers.go
IOT-Backend-main/internal/http/: coordinator_handlers.go  google_handlers.go  handlers.go  radar_handlers.go  settings_handlers.go  ws_broadcast.go
IOT-Backend-main/internal/repository/: BUILD.bazel  repository_test.go
IOT-Backend-main/internal/types/: types_test.go
IOT-Frontend-main/: package-lock.json
coordinator/: partitions.csv  platformio.ini
docs/: ACTION_REQUIRED.md  AUTO_MQTT_DISCOVERY.md  AUTO_PAIRING_FEATURE.md  AUTO_PAIRING_SUMMARY.md  COMPLETION_GUIDE.md  COORDINATOR_FIX_SUMMARY.md  CUSTOMIZATION_TAB_COMPLETE.md  CUSTOMIZATION_TAB_FINALIZED.md  CUSTOMIZE_TAB_CHECKLIST.md  CUSTOMIZE_TAB_IMPLEMENTATION.md  ESP_NOW_CHANNEL_FIX.md  FINAL_STEPS.md  FRONTEND_BACKEND_STARTUP.md  IMPLEMENTATION_SUMMARY.md  LIVE_MONITORING_SETUP.md  LIVE_MONITOR_IMPLEMENTATION.md  LOGGING_SUMMARY.md  MMWAVE_VISUALIZATION_COMPARISON.md  MQTT_LOGGING_GUIDE.md  NEW_3D_RADAR_DESIGN.md  ProductRequirementDocument.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_LIVE_MONITOR.md  RADAR_LAYOUT_IMPROVEMENTS.md  RADAR_VISUALIZATION.md  README.md  REORGANIZATION_SUMMARY.md  SESSION_SUMMARY.md  SETTINGS_TAB_CHECKLIST.md  SETTINGS_TAB_SUMMARY.md  SETTINGS_TAB_VISUAL_GUIDE.md  TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md  TEST_README.md  WIFI_CHANNEL_FIX.md  architecture.puml  dataflow-command-downlink.puml  dataflow-coordinator-telemetry.puml  dataflow-historical-query.puml  (+5 more)
node/: DELETE_ME_PowerManager_cpp.txt  README_OTA.md  README_STANDALONE.md  platformio.ini
(+193 files in other folders)
