bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.37.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "//:go.mod",
)
use_repo(go_deps, "org_mongodb_go_mongo_driver")
use_repo(go_deps, "org_uber_go_fx")
use_repo(go_deps, "com_github_gorilla_mux")
use_repo(go_deps, "com_github_gorilla_websocket")
use_repo(go_deps, "com_github_eclipse_paho_mqtt_golang", "in_gopkg_yaml_v3", "org_uber_go_zap")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
