load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["repository.go"],
    importpath = "github.com/DICEsda/IOT-TileNodeCoordinator/backend/internal/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/types",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_uber_go_zap//:zap",
    ],
)
