load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "iot_lib",
    srcs = ["main.go"],
    importpath = "github.com/DICEsda/IOT-TileNodeCoordinator/backend/cmd/iot",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/db",
        "//internal/http",
        "//internal/mqtt",
        "//internal/repository",
        "@com_github_gorilla_mux//:mux",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "iot",
    embed = [":iot_lib"],
    visibility = ["//visibility:public"],
)
